--- a/contacts.html
+++ b/contacts.html
@@ -8,27 +8,16 @@
        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
        <link rel="stylesheet" href="styles.css">
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <title>Main</title>
+       <title>Contacts</title>
     </head>
     <body>
         <nav>
             <div class="nav-wrapper teal lighten-2">
               <a href="#" class="brand-logo"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Main</a></li>
                 <li><a href="porfolio.html">Porfolio</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
               </ul>
             </div>
           </nav>
-          about
-          skills and experience
-          contacts
-          links 
-
-
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    </body>
-
-</html>
