--- a/porfolio.html
+++ b/porfolio.html
@@ -21,3 +21,8 @@
               </ul>
             </div>
           </nav>
+            <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
+
+</html>
