--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>About</title>
     </head>
-    <body>
+    <body bgcolor="#000000">
         <nav>
-            <div class="nav-wrapper teal lighten-2">
+            <div class="nav-wrapper N/A transparent">
               <a href="#" class="brand-logo"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">Main</a></li>
@@ -21,6 +21,17 @@
               </ul>
             </div>
           </nav>
+          <div class="row">
+
+            <div class="col s3">
+              <!-- Grey navigation panel -->
+            </div>
+      
+            <div class="col s9">
+              <!-- Teal page content  -->
+            </div>
+      
+          </div>
             <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
