--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Main</title>
     </head>
-    <body>
+    <body bgcolor="#000000">
         <nav>
-            <div class="nav-wrapper teal lighten-2">
+            <div class="nav-wrapper N/A transparent">
               <a href="#" class="brand-logo"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="about.html">About</a></li>
