change nav color

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body bgcolor="#000000">
         <nav>
-            <div class="nav-wrapper N/A transparent">
+            <div class="nav-wrapper cyan darken-1">
               <a href="#" class="brand-logo"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="about.html">About</a></li>
@@ -21,11 +21,10 @@
               </ul>
             </div>
           </nav>
-          about
-          skills and experience
-          contacts
-          links 
-
+          <div>
+            Apprentice Web Developer
+          </div>
+           
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
