--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
     </head>
     <body bgcolor="#000000">
         <nav>
-            <div class="nav-wrapper N/A transparent">
+            <div class="nav-wrapper cyan darken-1">
               <a href="#" class="brand-logo"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">Main</a></li>
