--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
           </nav>
           <div>
-            Apprentice Web Developer
+            <span class="white-text"><h3>Web Development Apprentice</h3></span>
           </div>
            
 
