--- a/contacts.html
+++ b/contacts.html
@@ -21,6 +21,10 @@
               </ul>
             </div>
           </nav>
+          <div class="container">
+            <span class="white-text"><h4>Contacts</h4></span>
+          </div>
+          
             <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
