--- a/porfolio.html
+++ b/porfolio.html
@@ -16,7 +16,7 @@
               <a href="#" class="brand-logo"></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">Main</a></li>
-                <li><a href="porfolio.html">Porfolio</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
               </ul>
             </div>
