--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>About</title>
     </head>
-    <body bgcolor="#000000">
+    <body class="black">
         <nav>
             <div class="nav-wrapper cyan darken-1">
               <a href="#" class="brand-logo"></a>
@@ -26,7 +26,9 @@
             <span class="white-text"><h3></h3></span>
             <span class="white-text"><h5>Hi, my name is Claudia Mendez. I'm currently enrolled in a 
                 full-stack web development boot-camp. It has been a challenge for me because of the 
-                fast pace and I with no prior experience in coding.
+                fast pace and me with no prior coding experience. I know I am going to fail, however,
+                I am set in my goals to learn. I have learned HTML, CSS, javascript, JQuery, Bootstrap,
+                Mysql, Mongo, and Npm. I am at apprentice level.
             </h5></span> 
               
             </div>
