--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
        <title>Main</title>
     </head>
-    <body bgcolor="#000000">
+    <body class="black">
         <nav>
             <div class="nav-wrapper cyan darken-1">
               <a href="#" class="brand-logo"></a>
