--- a/contacts.html
+++ b/contacts.html
@@ -1,32 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-       <meta charset="UTF-8">
-       <!-- Compiled and minified CSS -->
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-       <!-- Compiled and minified JavaScript -->
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-       <link rel="stylesheet" href="styles.css">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <title>Contacts</title>
-    </head>
-    <body bgcolor="#000000">
-        <nav>
-            <div class="nav-wrapper cyan darken-1">
-              <a href="#" class="brand-logo"></a>
-              <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="index.html">Main</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="porfolio.html">Porfolio</a></li>
-              </ul>
-            </div>
-          </nav>
-          <div class="container">
-            <span class="white-text"><h4>Contacts</h4></span>
+
+<head>
+  <meta charset="UTF-8">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contacts</title>
+</head>
+
+<body class="black">
+  <nav>
+    <div class="nav-wrapper cyan darken-1">
+      <a href="#" class="brand-logo"></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="index.html">Main</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="porfolio.html">Porfolio</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <form class="col s12">
+        <span class="white-text">
+          <h4>Contacts</h4>
+        </span>
+      </form>
+    </div>
+    <div class="row">
+      <div class="col s3">
+      </div>
+      <form class="col s6">
+          <div class="input-field col s6">
+            <span class="white-text">
+              <h6>Full Name:</h6>
+            </span>
+            <input id="last_name" type="text  text-white" class="validate">
           </div>
-          
+          <div class="col s3">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s3">
+          </div>
+          <div class="col s6">
+          <form class="col s6">
+                <span class="white-text">
+                  <h6>Message:</h6>
+                </span>
+                <div class="input-field col s6">
+                <input id="last_name" type="text  text-white" class="validate">
+              </div>
+              </div>
+              <div class="col s3">
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col s3">
+              </div>
+              <div class="input-field col s6">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+
             <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+            <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
