--- a/contacts.html
+++ b/contacts.html
@@ -31,6 +31,7 @@
         </span>
       </form>
     </div>
+    
     <div class="row">
       <div class="col s3">
       </div>
@@ -44,18 +45,18 @@
           <div class="col s3">
           </div>
         </div>
+    
 
         <div class="row">
           <div class="col s3">
           </div>
-          <div class="col s6">
           <form class="col s6">
+            <div class="input-field col s6">
                 <span class="white-text">
                   <h6>Message:</h6>
                 </span>
-                <div class="input-field col s6">
+                <div class="input-field col s12">
                 <input id="last_name" type="text  text-white" class="validate">
-              </div>
               </div>
               <div class="col s3">
               </div>
@@ -64,9 +65,15 @@
             <div class="row">
               <div class="col s3">
               </div>
+              <form class="col s6">
               <div class="input-field col s6">
+                  <span class="white-text">
+                    <h6>Email:</h6>
+                  </span>
                 <input id="email" type="email" class="validate">
-                <label for="email">Email</label>
+                </form>
+                </div>
+                <div class="col s3">
               </div>
             </div>
 
