--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="black">
+
   <nav>
     <div class="nav-wrapper cyan darken-1">
       <a href="#" class="brand-logo"></a>
@@ -23,59 +24,47 @@
       </ul>
     </div>
   </nav>
+
   <div class="container">
     <div class="row">
       <form class="col s12">
-        <span class="white-text">
-          <h4>Contacts</h4>
-        </span>
+        <span class="white-text"><h4>Contacts</h4></span>
       </form>
     </div>
-    
+
     <div class="row">
-      <div class="col s3">
+      <div class="col s3"></div>
+      <div class="col s6">
+        <form class="col s6">
+            <span class="white-text"><h6>Full Name:</h6></span>
+              <input id="last_name" type="text  text-white" class="validate">
+        </form>
       </div>
-      <form class="col s6">
-          <div class="input-field col s6">
-            <span class="white-text">
-              <h6>Full Name:</h6>
-            </span>
+      <div class="col s3"></div>
+    </div>
+
+
+    <div class="row">
+      <div class="col s3"></div>
+      <div class="col s6">
+        <form class="col s6">
+          <span class="white-text"><h6>Message:</h6></span>
             <input id="last_name" type="text  text-white" class="validate">
-          </div>
-          <div class="col s3">
-          </div>
-        </div>
-    
+        </form>    
+      </div>
+      <div class="col s3"></div>
+    </div>
 
-        <div class="row">
-          <div class="col s3">
-          </div>
-          <form class="col s6">
-            <div class="input-field col s6">
-                <span class="white-text">
-                  <h6>Message:</h6>
-                </span>
-                <div class="input-field col s12">
-                <input id="last_name" type="text  text-white" class="validate">
-              </div>
-              <div class="col s3">
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col s3">
-              </div>
-              <form class="col s6">
-              <div class="input-field col s6">
-                  <span class="white-text">
-                    <h6>Email:</h6>
-                  </span>
-                <input id="email" type="email" class="validate">
-                </form>
-                </div>
-                <div class="col s3">
-              </div>
-            </div>
+    <div class="row">
+      <div class="col s3"></div>
+      <div class="col s6">
+        <form class="col s6">
+          <span class="white-text"><h6>Email:</h6></span>
+              <input id="email" type="email" class="validate">
+        </form>
+      </div>
+      <div class="col s3"></div>
+    </div>
 
             <!--JavaScript at end of body for optimized loading-->
             <script type="text/javascript" src="js/materialize.min.js"></script>
